--- a/test.ipynb
+++ b/test.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext sql"
@@ -14,86 +12,381 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(psycopg2.OperationalError) FATAL:  database \"sparkifydb\" does not exist\n",
-      "\n",
-      "Connection info needed in SQLAlchemy format, example:\n",
-      "               postgresql://username:password@hostname/dbname\n",
-      "               or an existing connection: dict_keys([])\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%sql postgresql://student:student@127.0.0.1/sparkifydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>session_id</th>\n",
+       "        <th>location</th>\n",
+       "        <th>user_agent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>9999-07-27 16:06:36</td>\n",
+       "        <td>15</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>SOZCTXZ12AB0182364</td>\n",
+       "        <td>AR5KOSW1187FB35FF4</td>\n",
+       "        <td>818</td>\n",
+       "        <td>Chicago-Naperville-Elgin, IL-IN-WI</td>\n",
+       "        <td>&quot;Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, datetime.datetime(9999, 7, 27, 16, 6, 36), '15', 'paid', 'SOZCTXZ12AB0182364', 'AR5KOSW1187FB35FF4', 818, 'Chicago-Naperville-Elgin, IL-IN-WI', '\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM songplays LIMIT 5;"
+    "%sql SELECT * FROM songplay LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>user_id</th>\n",
+       "        <th>firstname</th>\n",
+       "        <th>lastname</th>\n",
+       "        <th>gender</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>101</td>\n",
+       "        <td>Jayden</td>\n",
+       "        <td>Fox</td>\n",
+       "        <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>83</td>\n",
+       "        <td>Stefany</td>\n",
+       "        <td>White</td>\n",
+       "        <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>66</td>\n",
+       "        <td>Kevin</td>\n",
+       "        <td>Arellano</td>\n",
+       "        <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>48</td>\n",
+       "        <td>Marina</td>\n",
+       "        <td>Sutton</td>\n",
+       "        <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>86</td>\n",
+       "        <td>Aiden</td>\n",
+       "        <td>Hess</td>\n",
+       "        <td>M</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('101', 'Jayden', 'Fox', 'M'),\n",
+       " ('83', 'Stefany', 'White', 'F'),\n",
+       " ('66', 'Kevin', 'Arellano', 'M'),\n",
+       " ('48', 'Marina', 'Sutton', 'F'),\n",
+       " ('86', 'Aiden', 'Hess', 'M')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM users LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>duration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOGNCJP12A58A80271</td>\n",
+       "        <td>Do You Finally Need A Friend</td>\n",
+       "        <td>ARB29H41187B98F0EF</td>\n",
+       "        <td>342.56934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOVYKGO12AB0187199</td>\n",
+       "        <td>Crazy Mixed Up World</td>\n",
+       "        <td>ARH4Z031187B9A71F2</td>\n",
+       "        <td>156.39465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOGXHEG12AB018653E</td>\n",
+       "        <td>It Makes No Difference Now</td>\n",
+       "        <td>AR0RCMP1187FB3F427</td>\n",
+       "        <td>133.32853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOBZBAZ12A6D4F8742</td>\n",
+       "        <td>Spanish Grease</td>\n",
+       "        <td>AROUOZZ1187B9ABE51</td>\n",
+       "        <td>168.25424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOZQDIU12A58A7BCF6</td>\n",
+       "        <td>Superconfidential</td>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>338.31138</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOGNCJP12A58A80271', 'Do You Finally Need A Friend', 'ARB29H41187B98F0EF', 342.56934),\n",
+       " ('SOVYKGO12AB0187199', 'Crazy Mixed Up World', 'ARH4Z031187B9A71F2', 156.39465),\n",
+       " ('SOGXHEG12AB018653E', 'It Makes No Difference Now', 'AR0RCMP1187FB3F427', 133.32853),\n",
+       " ('SOBZBAZ12A6D4F8742', 'Spanish Grease', 'AROUOZZ1187B9ABE51', 168.25424),\n",
+       " ('SOZQDIU12A58A7BCF6', 'Superconfidential', 'ARNTLGG11E2835DDB9', 338.31138)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM songs LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>artist_name</th>\n",
+       "        <th>artist_location</th>\n",
+       "        <th>artist_latitude</th>\n",
+       "        <th>artist_longitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARB29H41187B98F0EF</td>\n",
+       "        <td>Terry Callier</td>\n",
+       "        <td>Chicago</td>\n",
+       "        <td>41.88415</td>\n",
+       "        <td>-87.63241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARH4Z031187B9A71F2</td>\n",
+       "        <td>Faye Adams</td>\n",
+       "        <td>Newark, NJ</td>\n",
+       "        <td>40.73197</td>\n",
+       "        <td>-74.17418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR0RCMP1187FB3F427</td>\n",
+       "        <td>Billie Jo Spears</td>\n",
+       "        <td>Beaumont, TX</td>\n",
+       "        <td>30.08615</td>\n",
+       "        <td>-94.10158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AROUOZZ1187B9ABE51</td>\n",
+       "        <td>Willie Bobo</td>\n",
+       "        <td>New York, NY [Spanish Harlem]</td>\n",
+       "        <td>40.79195</td>\n",
+       "        <td>-73.94512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>Clp</td>\n",
+       "        <td></td>\n",
+       "        <td>nan</td>\n",
+       "        <td>nan</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('ARB29H41187B98F0EF', 'Terry Callier', 'Chicago', 41.88415, -87.63241),\n",
+       " ('ARH4Z031187B9A71F2', 'Faye Adams', 'Newark, NJ', 40.73197, -74.17418),\n",
+       " ('AR0RCMP1187FB3F427', 'Billie Jo Spears', 'Beaumont, TX', 30.08615, -94.10158),\n",
+       " ('AROUOZZ1187B9ABE51', 'Willie Bobo', 'New York, NY [Spanish Harlem]', 40.79195, -73.94512),\n",
+       " ('ARNTLGG11E2835DDB9', 'Clp', '', nan, nan)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM artists LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>start_time</th>\n",
+       "        <th>hour</th>\n",
+       "        <th>day</th>\n",
+       "        <th>week</th>\n",
+       "        <th>month</th>\n",
+       "        <th>year</th>\n",
+       "        <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9999-03-18 15:49:56</td>\n",
+       "        <td>1</td>\n",
+       "        <td>2</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9999-03-22 05:06:36</td>\n",
+       "        <td>1</td>\n",
+       "        <td>2</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9999-03-24 17:06:36</td>\n",
+       "        <td>1</td>\n",
+       "        <td>2</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9999-05-11 07:03:16</td>\n",
+       "        <td>2</td>\n",
+       "        <td>2</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9999-05-27 08:53:16</td>\n",
+       "        <td>3</td>\n",
+       "        <td>2</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Friday</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(datetime.datetime(9999, 3, 18, 15, 49, 56), 1, 2, 44, 11, 2018, 'Friday'),\n",
+       " (datetime.datetime(9999, 3, 22, 5, 6, 36), 1, 2, 44, 11, 2018, 'Friday'),\n",
+       " (datetime.datetime(9999, 3, 24, 17, 6, 36), 1, 2, 44, 11, 2018, 'Friday'),\n",
+       " (datetime.datetime(9999, 5, 11, 7, 3, 16), 2, 2, 44, 11, 2018, 'Friday'),\n",
+       " (datetime.datetime(9999, 5, 27, 8, 53, 16), 3, 2, 44, 11, 2018, 'Friday')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM time LIMIT 5;"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## REMEMBER: Restart this notebook to close connection to `sparkifydb`\n",
     "Each time you run the cells above, remember to restart this notebook to close the connection to your database. Otherwise, you won't be able to run your code in `create_tables.py`, `etl.py`, or `etl.ipynb` files since you can't make multiple connections to the same database (in this case, sparkifydb)."
@@ -102,9 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -125,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
